# bangor

./: CMakeLists.txt  Jenkinsfile  LICENSE  README.md
sources/c++/containers/: bitsstrings.cc
sources/c++/includes/containers/: bitsstrings.hh
sources/c++/includes/logger/: logger.hh
sources/c++/logger/: Makefile  logger.cc
tests/c++/containers/: bitsstrings_tests.cc
